--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
 
-  <body>style
+  <body>
+    style
     <div class="container">
       <nav
         class="navbar navbar-expand-lg navbar-primary fixed-top scrolling-navbar morpheus-den-gradient"
@@ -114,5 +115,82 @@
     </section>
 
     <!--  -->
+<!-- First container -->
+<div class="container">
+
+  <!-- Section About -->
+  <section id="about" class="section feature-box mb-5">
+
+    <!-- Section title -->
+    <h2 class="text-center text-uppercase my-5 pt-5 wow fadeIn" data-wow-delay="0.2s">About <strong>me</strong></h2>
+
+    <p class="text-center w-responsive mx-auto wow fadeIn my-5" data-wow-delay="0.2s">Python, Django, Flask and all things Tech. Backend Developer. 
+        Actively looking for remote opportunities.Enthusiastic junior software engineer looking forward participating in the complete product development lifecycle of successfully launched software</p>
+
+    <!-- First row -->
+    <div class="row features-big text-center wow fadeIn" data-wow-delay="0.4s">
+
+      <!-- First column -->
+      <div class="col-md-4 mb-5">
+
+        <!-- Panel -->
+        <div class="card card-body hoverable">
+
+          <i class="fas fa-laptop fa-3x mb-4" aria-hidden="true"></i>
+
+          <h5 class="font-weight-bold text-uppercase mb-4">Freelancer</h5>
+
+          <p class="dark-grey-text">Working on a range of projects from Wordpress to devops.</p>
+
+        </div>
+        <!-- Panel -->
+
+      </div>
+      <!-- First column -->
+      <!-- Second column -->
+      <div class="col-md-4 mb-5">
+
+        <!-- Panel -->
+        <div class="card card-body yellow hoverable">
+
+          <i class="fab fa-python fa-3x mb-4" aria-hidden="true"></i>
+
+          <h5 class="font-weight-bold text-uppercase mb-4">Python Developer</h5>
+
+          <p class="dark-grey-text">developing projects using apis, databases, google-forms, google-sheets.</p>
+
+        </div>
+        <!-- Panel -->
+
+      </div>
+      <!-- Second column -->
+
+      <!-- Third column -->
+      <div class="col-md-4 mb-5">
+
+        <!-- Panel -->
+        <div class="card card-body hoverable">
+
+          <i class="fas fa-pencil-alt fa-3x mb-4" aria-hidden="true"></i>
+
+          <h5 class="font-weight-bold text-uppercase mb-4">Writer</h5>
+
+          <p class="dark-grey-text">Writing about range of topics from sending text messages to airtime and many more.</p>
+
+        </div>
+        <!-- Panel -->
+
+      </div>
+      <!-- Third column -->
+
+    </div>
+    <!-- First row -->
+
+  </section>
+  <!-- Second section -->
+
+</div>
+
+
   </body>
 </html>
