--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
     />
 
     <!-- link css -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    style
     <div class="container">
       <nav
         class="navbar navbar-expand-lg navbar-primary fixed-top scrolling-navbar morpheus-den-gradient"
@@ -104,7 +103,7 @@
     <section class="banner">
       <div class="text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary-main">Moses King'ori</span>
+          <span class="heading-primary-main">Moses Gakuhi</span>
           <span class="heading-primary-sub">The web developer</span>
         </h1>
 
@@ -114,83 +113,58 @@
       </div>
     </section>
 
-    <!--  -->
-<!-- First container -->
-<div class="container">
+    <section id="about">
+      <h2 class="text-center text-uppercase my-5 pt-5 wow fadeIn" data-wow-delay="0.2s">About <strong>me</strong></h2>
 
-  <!-- Section About -->
-  <section id="about" class="section feature-box mb-5">
-
-    <!-- Section title -->
-    <h2 class="text-center text-uppercase my-5 pt-5 wow fadeIn" data-wow-delay="0.2s">About <strong>me</strong></h2>
-
-    <p class="text-center w-responsive mx-auto wow fadeIn my-5" data-wow-delay="0.2s">Python, Django, Flask and all things Tech. Backend Developer. 
+      <p class="text-center w-responsive mx-auto wow fadeIn my-5" data-wow-delay="0.2s">Python, Django, Flask and all things Tech. Backend Developer. 
         Actively looking for remote opportunities.Enthusiastic junior software engineer looking forward participating in the complete product development lifecycle of successfully launched software</p>
 
-    <!-- First row -->
-    <div class="row features-big text-center wow fadeIn" data-wow-delay="0.4s">
+      <div class="row features-big text-center wow fadeIn" data-wow-delay="0.4s">
 
-      <!-- First column -->
-      <div class="col-md-4 mb-5">
+        <div class="col-md-4 mb-5">
+          <!-- Panel -->
+          <div class="card card-body hoverable">
+            <i class="fas fa-laptop fa-3x mb-4" aria-hidden="true"></i>
 
-        <!-- Panel -->
-        <div class="card card-body hoverable">
+            <h5 class="font-weight-bold text-uppercase mb-4">Freelancer</h5>
 
-          <i class="fas fa-laptop fa-3x mb-4" aria-hidden="true"></i>
+            <p class="dark-grey-text">
+              Working on a range of projects from Wordpress to Devops.
+            </p>
+          </div>
+          <!-- Panel -->
+        </div>
 
-          <h5 class="font-weight-bold text-uppercase mb-4">Freelancer</h5>
+        <div class="col-md-4 mb-5">
 
-          <p class="dark-grey-text">Working on a range of projects from Wordpress to devops.</p>
+          <!-- Panel -->
+          <div class="card card-body yellow hoverable">
+
+            <i class="fab fa-python fa-3x mb-4" aria-hidden="true"></i>
+
+            <h5 class="font-weight-bold text-uppercase mb-4">Python Developer</h5>
+
+            <p class="dark-grey-text">Developing projects using apis, databases, google-forms, google-sheets.</p>
+
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-5">
+
+          <!-- Panel -->
+          <div class="card card-body hoverable">
+
+            <i class="fas fa-pencil-alt fa-3x mb-4" aria-hidden="true"></i>
+
+            <h5 class="font-weight-bold text-uppercase mb-4">Writer</h5>
+
+            <p class="dark-grey-text">Writing about range of topics from sending text messages to airtime and many more.</p>
+
+          </div>
+          <!-- Panel -->
 
         </div>
-        <!-- Panel -->
-
       </div>
-      <!-- First column -->
-      <!-- Second column -->
-      <div class="col-md-4 mb-5">
-
-        <!-- Panel -->
-        <div class="card card-body yellow hoverable">
-
-          <i class="fab fa-python fa-3x mb-4" aria-hidden="true"></i>
-
-          <h5 class="font-weight-bold text-uppercase mb-4">Python Developer</h5>
-
-          <p class="dark-grey-text">developing projects using apis, databases, google-forms, google-sheets.</p>
-
-        </div>
-        <!-- Panel -->
-
-      </div>
-      <!-- Second column -->
-
-      <!-- Third column -->
-      <div class="col-md-4 mb-5">
-
-        <!-- Panel -->
-        <div class="card card-body hoverable">
-
-          <i class="fas fa-pencil-alt fa-3x mb-4" aria-hidden="true"></i>
-
-          <h5 class="font-weight-bold text-uppercase mb-4">Writer</h5>
-
-          <p class="dark-grey-text">Writing about range of topics from sending text messages to airtime and many more.</p>
-
-        </div>
-        <!-- Panel -->
-
-      </div>
-      <!-- Third column -->
-
-    </div>
-    <!-- First row -->
-
-  </section>
-  <!-- Second section -->
-
-</div>
-
-
+    </section>
   </body>
 </html>
